Remove old testing framework